# coverage-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: session_token_savings.json
coverage_mcp/: __init__.py  app.py  contracts.py  dashboard.py  git_utils.py  models.py  parsers.py  service.py  storage.py  storage_helpers.py
docs/: architecture.md  releasing.md
scripts/: benchmark_savings.py  verify_connectors.py
tests/: test_api_edges.py  test_app.py  test_git_models.py  test_mcp.py  test_parser_edges.py  test_parsers.py  test_service.py  test_storage.py  test_storage_edges.py
