[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coverage-mcp"
version = "0.1.1"
description = "Local-first coverage time-series dashboard and MCP server."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Coverage MCP contributors"},
]
keywords = ["coverage", "mcp", "fastapi", "duckdb", "testing", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "duckdb>=1.0",
    "fastapi>=0.115",
    "mcp>=1.23,<2",
    "pydantic>=2.8",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.6",
    "httpx>=0.27",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "tox>=4.23",
]

[project.scripts]
coverage-mcp = "coverage_mcp.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["coverage_mcp"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"coverage_mcp/app.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true
cache_dir = "/tmp/coverage-mcp-mypy-cache"
